Implemented the launch delegate for the HybridInterpreterLaunch so the DebuggableHybridInterpreter can use it.
svn path=/spoofax-imp/trunk/org.strategoxt.imp.debug.core/; revision=22428